  . Improved PHP binary size and startup speed with GCC4 visibility control.
    (Nuno)
  . Improved engine stack implementation for better performance and stability.
    (Dmitry)
  . Improved memory usage by moving constants to read only memory.
    (Dmitry, Pierre)
  . Changed exception handling. Now each op_array doesn't contain
    ZEND_HANDLE_EXCEPTION opcode in the end. (Dmitry)
- Improved php.ini handling: (Jani)
  . Added ".htaccess" style user-defined php.ini files support for CGI/FastCGI
  . Added support for special [PATH=/opt/httpd/www.example.com/] and
    [HOST=www.example.com] sections. Directives set in these sections can
    not be overridden by user-defined ini-files or during runtime.
  . Added better error reporting for php.ini syntax errors
  . Allowed using full path to load modules using "extension" directive
  . Allowed "ini-variables" to be used almost everywhere ini php.ini files
  . Allowed using alphanumeric/variable indexes in "array" ini options
  . Added 3rd optional parameter to parse_ini_file() to specify the scanning
    mode of INI_SCANNER_NORMAL or INI_SCANNER_RAW. In raw mode option values
    and section values are treated as-is
  . Fixed get_cfg_var() to be able to return "array" ini options
- Improved and cleaned CGI code:
  . FastCGI is now always enabled and can not be disabled.
    See sapi/cgi/CHANGES for more details. (Dmitry)
  . Added CGI SAPI -T option which can be used to measure execution
    time of script repeated several times. (Dmitry)
- Improved streams:
  . Added "ignore_errors" option to http fopen wrapper. (David Zulke, Sara)
  . Added context parameter for copy() function. (Sara)
  . Added "glob" stream wrapper. (Marcus)
- Improved ext/soap to support element names in context of XMLShema's <any>.
  (Dmitry)
- Improved ext/openssl: (Dmitry)
  . Added support for OpenSSL digest functions
  . Added support for OpenSSL cipher functions
  . Added access to internal values of DSA, RSA and DH keys